Alignment fixes

--- a/asset_sources/scss/laterpay-migrator-backend.scss
+++ b/asset_sources/scss/laterpay-migrator-backend.scss
@@ -1,6 +1,14 @@
 @import 'objects/_variables';
 @import 'objects/_layout';
+@import 'objects/_lists';
 
+
+/* Status indicator ------------------------------------------------------------------------------------------------- */
+.lp_status-indicator {
+    display: inline-block;
+    line-height: 2em;
+    margin-right: $fs;
+}
 
 /* File upload ------------------------------------------------------------------------------------------------------ */
 .lp_upload {
